# web_server

./: Cargo.toml  Makefile
auto/: jxs.sh
jxs/config/: config.yaml
public/: index.html  index.php
src/: lib.rs  logger.rs  main.rs
src/config/: config.yaml  config_parser.rs  default.rs  jexus_config.rs  mod.rs  server_config.rs
src/core/: handler.rs  jexus.rs  jexus_logger.rs  jexus_server_manager.rs  location.rs  mod.rs  resolver.rs  server.rs  server_manager.rs
src/jxs/http/: index.rs  mod.rs  proxy.rs  upstream.rs
src/os/: capabilities.rs  file_manager.rs  mod.rs
src/server/: codes_response.rs  http_response.rs  mod.rs
src/server/headers/: cache.rs  cahce.rs
src/server/status_line/: mod.rs  status_line.rs
