[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", features = ["thread-pool"] }
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
threadpool = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
bytes = "1.6.0"
uuid = { version = "1.3.1", features = ["v7"] }
futures-util = "0.3.30"
num_cpus = "1.0"
log = "0.4"
flexi_logger = "0.28.5"
regex = "1.10.5"

#capabilities
nix = { version = "0.29.0", features = ["user"] }